@@ -1,19 +1,24 @@
 package net.shaidullin.code_maker.integration;
 
+import net.shaidullin.code_maker.core.metadata.ElementMetadata;
 import net.shaidullin.code_maker.core.metadata.LeafMetadata;
 import net.shaidullin.code_maker.core.metadata.MetadataSettings;
+import net.shaidullin.code_maker.core.node.ElementNode;
 import net.shaidullin.code_maker.core.node.LeafNode;
 import net.shaidullin.code_maker.core.node.ModuleNode;
 import net.shaidullin.code_maker.core.node.PackageNode;
 import net.shaidullin.code_maker.core.type.FieldType;
 import net.shaidullin.code_maker.utils.FileUtils;
+import net.shaidullin.code_maker.utils.NodeUtils;
 import org.apache.commons.lang3.StringUtils;
 
 import java.io.File;
 import java.io.FileInputStream;
 import java.io.IOException;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
+import java.util.UUID;
 
 public abstract class AbstractIntegrationObject<N extends PackageNode, M extends LeafMetadata, F extends FieldType<M>>
     implements IntegrationObject<N, M, F> {
@@ -21,7 +26,7 @@ public abstract class AbstractIntegrationObject<N extends PackageNode, M extends
     public final void initialize(ModuleNode moduleNode) {
         // create folders of integration objects
         String path = StringUtils.join(
-            List.of(FileUtils.buildPathToMetadata(moduleNode), this.getFolder()),
+            Arrays.asList(FileUtils.buildPathToMetadata(moduleNode), this.getFolder()),
             FileUtils.SEPARATOR);
 
         File fsPath = new File(path);
@@ -31,6 +36,13 @@ public abstract class AbstractIntegrationObject<N extends PackageNode, M extends
                 path
             ));
         }
+
+        ElementNode elementNode = IoUtils.assembleElementNode(this, moduleNode);
+        ElementMetadata metadata = new ElementMetadata();
+        metadata.setUuid(UUID.randomUUID());
+        metadata.setSystemName(elementNode.getSystemName());
+        metadata.getFqnPackageParts().add(this.getFolder());
+        NodeUtils.writeMetadata(elementNode, metadata, false);
     }
 
     @Override
@@ -43,14 +55,7 @@ public abstract class AbstractIntegrationObject<N extends PackageNode, M extends
                 continue;
             }
 
-            // [0] - filename, [1] - extension
-            String[] parts = fileName.split("\\.");
-
-            String systemName = parts.length > 0
-                ? parts[0]
-                : fileName;
-
-
+            String systemName = FileUtils.getFileName(fileName);
             File leafFile = new File(pathToMetadata, fileName);
             try (FileInputStream inputStream = new FileInputStream(leafFile)) {
                 LeafNode<N, M> node = this.buildLeaf(systemName, inputStream, packageNode);
